Added a preset (template, view, css) for editing user profile. Added missing statics

--- a/TheFlower/shops/static/css/base.css
+++ b/TheFlower/shops/static/css/base.css
@@ -237,8 +237,14 @@ a
 }
 .username
 {
-	position: relative;
-	color: var(--black2);
+    display: flex;
+    position: relative;
+    color: var(--black2);
+    flex-direction: row;
+    align-items: center;
+    width: 300px;
+    justify-content: space-evenly;
+    text-align: center;
 }
 .user
 {
