--- a/TheFlower/staticfiles/css/base.css
+++ b/TheFlower/staticfiles/css/base.css
@@ -13,11 +13,32 @@
 	--grey: #f5f5f5;
 	--black1: #222;
 	--black2: #999;
+	--blue1: #84b2fa;
+	--green: #47eb0c;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+  background-color: #f9f9fd;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(180deg, #00c6fb, #005bea);
+}
+
 body
 {
 	min-height: 100vh;
 	overflow-x: hidden;
+}
+a
+{
+    text-decoration: none;
 }
 .contanier
 {
@@ -132,6 +153,12 @@ body
 	box-shadow: 35px -35px 0 10px var(--white);
 	pointer-events: none;
 }
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 
 /*main*/
 .main
@@ -139,7 +166,7 @@ body
 	position: absolute;
 	width: calc(100% - 300px);
 	left: 300px;
-	min-height: 100vh;
+	height: calc(100% - 100px);
 	background: var(--white);
 	transition: 0.5s;
 }
@@ -157,6 +184,13 @@ body
 	align-items: center;
 	padding: 0 10px;
 }
+.topbar .username a
+{
+    text-decoration: none;
+    color: var(--blue);
+    font-size: 1.1em;
+}
+
 .toggle
 {
 	position: relative;
@@ -225,57 +259,7 @@ body
 	object-fit: cover;
 }
 
-.cardBox
-{
-	position: relative;
-	width: 100%;
-	padding: 20px;
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 30px;
-}
 
-.cardBox .card
-{
-	position: relative;
-	background: var(--white);
-	padding: 30px;
-	border-radius: 20px;
-	display: flex;
-	justify-content: space-between;
-	cursor: pointer;
-	box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-}
-
-.cardBox .card .numbers
-{
-	position: relative;
-	font-weight: 500;
-	font-size: 2.5em;
-	color: var(--blue);
-}
-.cardBox .card .cardName
-{
-	color: var(--black2);
-	font-size: 1.1em;
-	margin-top: 5px;
-}
-.cardBox .card .iconBox
-{
-	font-size: 3.5em;
-	color: var(--black2);
-}
-.cardBox .card:hover
-{
-	background: var(--blue);
-}
-
-.cardBox .card:hover .numbers,
-.cardBox .card:hover .cardName,
-.cardBox .card:hover .iconBox
-{
-	color: var(--white);
-}
 .details
 {
 	position: relative;
@@ -460,10 +444,6 @@ body
 	{
 		left: 300px;
 	}
-	.cardBox
-	{
-		grid-template-columns: repeat(2, 1fr);
-	}
  }
 @media (max-width:768px)
 {
@@ -483,10 +463,6 @@ body
 
 @media (max-width:480px)
 {
-	.cardBox
-	{
-		grid-template-columns: repeat(1, 1fr);
-	}
 	.cardHeader h2
 	{
 		font-size: 20px;
