--- a/TheFlower/shops/templates/shops/index.html
+++ b/TheFlower/shops/templates/shops/index.html
@@ -1,20 +1,19 @@
 {% extends "shops/base.html" %}
 {% load static %}
+
 {% block extra_head %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href='{%static "css/index.css" %}' />
 {% endblock %}
+
 {% block navigation %}
-<!--  {% for shop in shops %}-->
-<!--  <li class="nonauth">-->
-<!--    <a href="#">-->
-<!--      <span class="icon"><ion-icon name="log-in-outline"></ion-icon></span>-->
-<!--      <span class="title">{{shop.name}}</span>-->
-<!--    </a>-->
-<!--  </li>-->
-<!--  {% endfor %}-->
 {% endblock %}
 
 {% block content %}
+    {% include 'shops/messages.html' %}
+
 <div class="titleContent">
   <h3>Выберете город из списка:</h3>
 </div>
@@ -35,4 +34,9 @@
 
 {% block extra_script %}
   <script type="text/javascript" src = '{%static "js/dropmenu.js" %}'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 {% endblock %}
