fix templates, refactor css. Delete repeats.

--- a/TheFlower/shops/templates/shops/index.html
+++ b/TheFlower/shops/templates/shops/index.html
@@ -2,9 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href='{%static "css/index.css" %}' />
 {% endblock %}
 
@@ -12,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'shops/messages.html' %}
+    {% include 'users/messages.html' %}
 
 <div class="titleContent">
   <h3>Выберете город из списка:</h3>
