Add form Update user info.

--- a/TheFlower/users/templates/users/profile.html
+++ b/TheFlower/users/templates/users/profile.html
@@ -15,12 +15,52 @@
 <div class="wrapper">
   <div class="cardBox">
     <div class="row form-group">
-    Логин: <input type="text" value="{{user_profile.username}}">
-    Имя: <input type="text" value="{{user_profile.first_name}}">
-    Фамилия: <input type="text" value="{{user_profile.last_name}}">
-    Email: <input type="text" value="{{user_profile.email}}">
-    Телефон: <input type="text" value="{{user_profile.phone}}">
-    Фото: <img src="{{user_profile.image.url}}" alt="">
+    <form method="POST">
+    {% csrf_token %}
+
+    {% for hidden_field in form.hidden_fields %}
+        {{ hidden_field }}
+    {% endfor %}
+    {% if form.non_field_errors %}
+        <div class="alert alert-danger" role="alert">
+          {% for error in form.non_field_errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+    {% endif %}
+
+    {% for field in form.visible_fields %}
+        <div class="form-group">
+            {{ field.label_tag }}
+            {% if form.is_bound %}
+                {% if field.errors %}
+                    {% render_field field class="form-control is-invalid" %}
+                    {% for error in field.errors %}
+                        <div class="invalid-feedback">
+                          {{ error }}
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    {% render_field field class="form-control is-valid" %}
+                {% endif %}
+            {% else %}
+                {% render_field field class="form-control" %}
+            {% endif %}
+            {% if field.help_text %}
+                <small class="form-text text-muted">{{ field.help_text }}</small>
+            {% endif %}
+        </div>
+    {% endfor %}
+    <div class="buttonCreate">
+        <button type="submit" class="btn btn-primary">Сохранить</button>
+    </div>
+    </form>
+<!--    Логин: <input type="text" value="{{user_profile.username}}">-->
+<!--    Имя: <input type="text" value="{{user_profile.first_name}}">-->
+<!--    Фамилия: <input type="text" value="{{user_profile.last_name}}">-->
+<!--    Email: <input type="text" value="{{user_profile.email}}">-->
+<!--    Телефон: <input type="text" value="{{user_profile.phone}}">-->
+<!--    Фото: <img src="{{user_profile.image.url}}" alt="">-->
     </div>
   </div>
 
